--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "use-count-up": "^3.0.1"
   },
