--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -25,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-swipeable": "^7.0.1",
+    "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "use-count-up": "^3.0.1"
